--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "framer-motion": "^11.0.28",
+    "ldrs": "^1.0.1",
     "lucide-react": "^0.378.0",
     "material-icons": "^1.13.12",
     "react": "^18.3.1",
