--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@coreui/coreui": "^5.0.1",
+    "@coreui/icons": "^3.0.1",
+    "@coreui/icons-react": "^2.2.1",
     "@coreui/react": "^5.0.0",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
@@ -36,6 +38,7 @@
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.23.0",
     "react-slick": "^0.30.2",
+    "simplebar-react": "^3.2.5",
     "slick-carousel": "^1.8.1",
     "styled-components": "^6.1.8",
     "tailwind-merge": "^2.3.0",
